--- a/Redmine.ManagerWPF/Views/MainWindow.xaml
+++ b/Redmine.ManagerWPF/Views/MainWindow.xaml
@@ -1,5 +1,6 @@
 ﻿<Window
     x:Class="Redmine.ManagerWPF.Views.MainWindow"
+    x:Name="MainWindowWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -18,7 +19,9 @@
     ui:WindowHelper.UseModernWindowStyle="True"
     mc:Ignorable="d"
     WindowStartupLocation="CenterScreen"
-    Closing="Window_Closing">
+    Closing="Window_Closing"
+    StateChanged="MainWindowWindow_StateChanged"
+    xmlns:tb="http://www.hardcodet.net/taskbar">
     <Window.DataContext>
         <vm:MainWindowViewModel />
     </Window.DataContext>
@@ -46,6 +49,10 @@
                 </MenuItem>
                 <MenuItem FontSize="12" Header="_Opcje">
                     <MenuItem FontSize="12" Command="{Binding OpenSettingsDialogCommand}" Header="_Ustawienia" />
+                    <MenuItem FontSize="12" Header="_Baza danych">
+                        <MenuItem FontSize="12" Command="{Binding OpenCreateBackupDialogCommand}" Header="_Utwórz kopię" />
+                        <MenuItem FontSize="12" Command="{Binding OpenRestoreBackupDialogCommand}" Header="_Przywróć kopię" />
+                    </MenuItem>
                 </MenuItem>
                 <MenuItem FontSize="12" Header="_Raporty">
                     <MenuItem FontSize="12" Command="{Binding OpenDailyRaportDialogCommand}" Header="_Dzienny raport" />
@@ -55,6 +62,12 @@
                 </MenuItem>
             </Menu>
         </DockPanel>
+        <tb:TaskbarIcon
+            ToolTipText="Redmine Manager"
+            LeftClickCommand="{Binding ShowMainWindowCommand}" 
+            LeftClickCommandParameter="{Binding ElementName=MainWindowWindow}"
+            >
+        </tb:TaskbarIcon>
         <Grid
             Grid.Row="1"
             Grid.Column="0">
@@ -66,7 +79,7 @@
             <ComboBox
                 x:Name="projectComboBox"
                 HorizontalAlignment="Stretch"
-                Margin="5,0,5,0"
+                Margin="5,0,10,0"
                 MinWidth="200"
                 Grid.Column="1"
                 Height="70"
