Add logo, fix multithread context problem, fix not refresh data in issue list after set Issue as Done and reload Issue list, add edit time interval dates option.

--- a/Redmine.ManagerWPF/Views/ContentDialogs/DailyRaport.xaml
+++ b/Redmine.ManagerWPF/Views/ContentDialogs/DailyRaport.xaml
@@ -20,7 +20,7 @@
     <ui:ContentDialog.Resources>
         <ResourceDictionary>
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-            <conv:InvertableBooleanToVisibilityConverter x:Key="InvertableBooleanToVisibilityConverter" />
+            <conv:InvertBooleanToVisibilityConverter x:Key="InvertBooleanToVisibilityConverter" />
             <conv:IsTimeIntervalTypeConverter x:Key="IsTimeIntervalTypeConverter" />
             <conv:IsEverythingElseThanTimeIntervalConverter x:Key="IsEverythingElseThanTimeIntervalConverter" />
             <conv:StringToVIsibilityConverter x:Key="StringToVIsibilityConverter" />
@@ -28,14 +28,20 @@
     </ui:ContentDialog.Resources>
 
     <Grid Width="480" MaxHeight="600">
-        <ProgressBar IsIndeterminate="True" Visibility="{Binding DataLoading, Converter={StaticResource BooleanToVisibilityConverter}}" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <DatePicker DisplayDate="{Binding Date}" Grid.Row="0" Margin="0,0,0,10" SelectedDate="{Binding Date, Mode=TwoWay}" />
+        <ProgressBar Grid.Row="1" IsIndeterminate="True" Visibility="{Binding DataLoading, Converter={StaticResource BooleanToVisibilityConverter}}" />
 
         <TreeView
+            Grid.Row="1"
             FontSize="12"
             BorderBrush="Black"
             BorderThickness="1"
             VerticalAlignment="Stretch"
-            Visibility="{Binding DataLoading, Converter={StaticResource InvertableBooleanToVisibilityConverter}}"
+            Visibility="{Binding DataLoading, Converter={StaticResource InvertBooleanToVisibilityConverter}}"
             ItemsSource="{Binding RaportData}">
             <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate DataType="{x:Type dailyRaports:ProjectListItemModel}" ItemsSource="{Binding Childrens}">
@@ -59,6 +65,7 @@
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
                             <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal">
                                 <TextBlock FontSize="13" FontWeight="SemiBold"  Text="Start:"/>
@@ -76,6 +83,11 @@
                                 <TextBlock FontSize="13" FontWeight="SemiBold" Margin="10,0,0,0" Text="Do komentarza:"/>
                                 <TextBlock FontSize="12" Margin="5,0,0,0" TextWrapping="Wrap" Text="{Binding ToComment}" />
                             </StackPanel>
+                            <StackPanel Margin="0,10,0,0" Grid.Column="0" Grid.Row="2" Orientation="Horizontal" Visibility="{Binding Note, Converter={StaticResource StringToVIsibilityConverter}}">
+                                <TextBlock FontSize="13" FontWeight="SemiBold"  Text="Notatka:"/>
+                                <TextBlock FontSize="12" Margin="5,0,0,0" Text="{Binding Note}" />
+                            </StackPanel>
+
                         </Grid>
                     </Grid>
                 </HierarchicalDataTemplate>
