--- a/Redmine.ManagerWPF/Views/Windows/SearchWindow.xaml
+++ b/Redmine.ManagerWPF/Views/Windows/SearchWindow.xaml
@@ -10,6 +10,7 @@
         xmlns:customBehaviors="clr-namespace:Redmine.ManagerWPF.Desktop.Behaviors"
         xmlns:treeModels="clr-namespace:Redmine.ManagerWPF.Desktop.Models.Tree"
         xmlns:uc="clr-namespace:Redmine.ManagerWPF.Desktop.Views.UserControls"
+        xmlns:ui="http://schemas.modernwpf.com/2019"
         mc:Ignorable="d"
         Title="Wyszukaj" Height="600" Width="800">
     <Window.DataContext>
